@@ -623,7 +623,7 @@ public final class ConfigImportHelper {
     boolean headless;
     BuildNumber compatibleBuildNumber = null;
     MarketplaceRequests marketplaceRequests = null;
-    String bundledPluginPath = null;
+    Path bundledPluginPath = null;
     Map<PluginId, Set<String>> brokenPluginVersions = null;
 
     ConfigImportOptions(Logger log) {
@@ -882,7 +882,7 @@ public final class ConfigImportHelper {
           if (line.equals("-XX:MaxJavaStackTraceDepth=-1")) {
             i.set("-XX:MaxJavaStackTraceDepth=10000"); updated = true;
           }
-          else if (line.startsWith("-agentlib:yjpagent")) {
+          else if (line.startsWith("-agentlib:yjpagent") || "-Xverify:none".equals(line) || "-noverify".equals(line)) {
             i.remove(); updated = true;
           }
         }
